--- a/index.html
+++ b/index.html
@@ -2,19 +2,18 @@
     <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
-        <title>  </title>
+        <title>PINK WORLD</title>
 
     </head>
     <body>
 
-            <h1>   </h1>
+            <h1> PINK WORLD  </h1>
 
-            <p>   </p>
-            <p><br></br></p>
-            <p></p>
-            <p></p>
+            <p> vendas de roupas infantis  </p>
+            
+        </p>
 
-            <img src=""/>
+            <img src="file:///home/escola/Downloads/112015_0001--2-%20(1).webp"/>
        
     </body>
 
